
syntax = "proto3";
package PB;

message LogicServerData
{
    int32 area_id = 1;
    string server_name = 2;
    string server_ip = 3;
    int32 server_port = 4;
    string server_token = 5;
}

message LogicServerListData
{
    LogicServerData server_data = 1;
}

message ServerRegisterBack
{
    repeated LogicServerData logic_srv_list = 1;
}

message AssestCompareList
{
    message AssestCompareInfo
    {
        string file_name = 1;   //文件名
        string file_md5 = 2;    //文件md5
    }
    repeated AssestCompareInfo assestList = 1;
}

message TransferAssestInfo
{
    string file_name = 1;   //当前传输文件名字
    bytes file_content = 2;     //本次传输的内容
}

message ServerRunInfo
{
    string server_name = 1; //名字
    int32 server_areaId = 2;    //区服id
    int64 server_run_time = 3;  //运行时间
    float server_fps = 4;       //fps
    float logic_time = 5;       //逻辑耗时
}

message ServiceData
{
    int32 adreId = 1;
    int32 service_id = 2;
    string service_name = 3;
    string service_address = 4;
}

message ServiceDataList
{
    repeated ServiceData services = 1;
}

message UserRegisterData
{
    string account = 1;  //账户
    string password = 2; //密码
    int64 phonenum = 3; //手机号
    string platform = 4;    //平台
    string device_mac = 5;    //设备物理地址
}

message UserRegisterBack
{
    int64 player_id = 1; //玩家id
    int64 register_time = 2; //注册事件
    string token = 3; //生成的令牌
}

message UserAccountData
{
    int64 user_id = 1;      //用户id
    string account = 2;     //账户
    string passwd = 3;      //密码
    string platform = 4;    //平台
    int64 phonenum = 5;     //手机号
    string device_mac = 6;  //设备id
    int64 register_time = 7;    //注册事件
    int64 last_logintime = 8;   //上次登录时间
}